# XMP-Toolkit-SDK

./: CMakeLists.txt
XMPCore/: CMakeLists.txt
XMPCore/resource/win/: XMPCore.def
XMPCore/source/: ExpatAdapter.cpp
XMPFiles/: CMakeLists.txt
XMPFiles/resource/win/: XMPFiles.def
XMPFiles/source/FileHandlers/: SVG_Handler.hpp  UCF_Handler.cpp
XMPFiles/source/FormatSupport/: SVG_Adapter.cpp  SWF_Support.cpp  SWF_Support.hpp  XMPScanner.cpp  XMPScanner.hpp
XMPFiles/source/PluginHandler/: PluginManager.cpp  XMPAtoms.h
cmake/: xmp-toolkit-sdk-config.cmake.in
samples/source/common/: XMPScanner.cpp
